<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:background="@color/colorWhite"
                                             android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_titleBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp">

        <TextView
                android:id="@+id/registration_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/create_account_title"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:background="@drawable/custom_trasparent_button"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/filter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="10dp"/>

    </android.support.constraint.ConstraintLayout>

    <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:background="@drawable/custom_edittext_gray"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:background="@drawable/custom_edittext_gray"
            app:layout_constraintTop_toBottomOf="@+id/et_first_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/et_email"/>

    <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/et_last_name"
            android:hint="@string/email"
            android:textSize="15sp"
            android:background="@drawable/custom_edittext_gray"
            android:inputType="textEmailAddress"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@+id/et_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_password"/>

    <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            android:ems="10"
            android:hint="@string/password"
            android:textSize="15sp"
            android:background="@drawable/custom_edittext_gray"
            android:inputType="textPassword"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"/>
    <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:background="@drawable/custom_fill_button"
            android:textColor="@android:color/white"
            android:text="@string/create_act"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:textAllCaps="false"
            android:stateListAnimator="@null"/>


</android.support.constraint.ConstraintLayout>