<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:orientation="vertical"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" >

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_titleBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp">

            <TextView
                    android:id="@+id/login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/login_title"
                    android:textColor="@color/colorSecondaryDark"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/container_edittext"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp">

        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:background="@drawable/custom_edittext_gray"
                android:textSize="15sp"
                android:gravity="start|top"
                android:inputType="textEmailAddress"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:background="@drawable/custom_edittext_gray"
                android:textSize="15sp"
                android:gravity="start|top"
                android:inputType="textPassword"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/et_email"/>

    </android.support.constraint.ConstraintLayout>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_fill_button"
            android:text="@string/login_title"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_edittext"
            android:stateListAnimator="@null"
            android:hapticFeedbackEnabled="false"/>

    <!-- TODO aggiungere password dimenticata -->

    <Button
            android:id="@+id/btn_register_account"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/create_act"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryDark"
            android:background="@drawable/custom_stroke_button"
            android:layout_marginBottom="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="70dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp"
            android:stateListAnimator="@null"/>
    <!--app:layout_constraintEnd_toEndOf="parent"-->


</android.support.constraint.ConstraintLayout>