...

    <string name="euro">€</string>
    <string name="create_account_title">Crea nuovo account</string>
    <string name="logging">Login in corso</string>
    <string name="login_failed">Login fallito: riprovare.</string>
    <string name="creating_account_failed">Creazione account fallita: riprovare.</string>
    <string name="error_fill_fields">Prego inserire tutti i valori richiesti</string>
    <string name="creating_account">Creazione account in corso</string>

    <string name="models">Modelli</string>
    <string name="model_created">Modello creato con successo</string>
    <string name="model_not_created">Impossibile creare il modello. Riprovare</string>
</resources>
...
