...
            app:layout_constraintTop_toBottomOf="@+id/container_et"/>


    <!-- DESCRIZIONE -->

    <Button
            android:id="@+id/btn_create_account"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/save_new_account"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
...
